--- a/variables-dev.yaml
+++ b/variables-dev.yaml
@@ -2,3 +2,4 @@ login_user: root
 login_host: db-dev.daws78.shop
 login_password: ExpenseApp1
 DB_HOST: db-dev.daws78.shop
+BACKEND_API_URL: backend.app-dev.daws78.shop
